Fix gap on add modal being higher than expected

--- a/src/styles/layouts/_add-modal.scss
+++ b/src/styles/layouts/_add-modal.scss
@@ -5,7 +5,7 @@
     max-width: 75%;
     display: flex;
     flex-direction: column;
-    gap: a.rem(32);
+    gap: a.rem(24);
     padding: a.rem(32);
     border-radius: a.rem(10);
     background-color: var(--background-color-1);
